deployments/kubernetes/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend
  namespace: securityhub
  labels:
    app: backend
spec:
  replicas: 3
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      volumes:
        - name: resources
          emptyDir: {}
      containers:
      - name: backend
        image: gcr.io/mateo-burillo-ns/securityhub-backend:latest
        ports:
        - containerPort: 8080
        volumeMounts:
          - name: resources
            mountPath: /resources
            readOnly: true
      - name: resources
        image: gcr.io/mateo-burillo-ns/securityhub-resources:latest
        command: ["/bin/sh", "-c", "--"]
        args: ["while true; do cp -r /resources/* /shared-resources; sleep 3600; done"]
        volumeMounts:
          - name: resources
            mountPath: /shared-resources
